# Log-Guard

./: .cursorrules  .env.example  .gitignore  LICENSE  README.md  RELEASE_CHECKLIST.md  pyproject.toml
docs/: architecture.md  benchmarks.md
src/log_guard/: __init__.py  distill.py  io_config.py  log_prep.py  logging_config.py  prompt.py
src/log_guard/lg/: __init__.py  classify.py  cli.py  debug_cmd.py  executor.py  history.py  passthrough.py  pipeline.py  preprocess_input.py  pytest_summary.py  reader.py  rtk_adapter.py  runner.py  runner_windows.py  session.py  simple_green.py  stats.py  storage.py  telemetry.py  track_config.py  tracks.toml  v23_config.py  warning_handling.py
src/log_guard/pipeline/: __init__.py  assembly.py  config.py  passthrough.py  snapshots.py  stages.py  v23_runner.py
src/log_guard/preprocess/: block_chunk.py  char_clean.py  chars_v22_config.py  dedup.py  dict_lark.py  drain_config.py  drain_dedup.py  drain_kv_merge.py  ghost_cluster_mask.py  ghost_projection.py  inline_drain.py  inplace_sanitize.py  mid_char_clean.py  path_prune.py  pipe_config.py  pytest_block_extract.py  soft_clean_v22.py  stacktrace_extract.py  temporal_strip.py  value_extract.py  value_extract_v18.py  value_paste.py  value_store.py  vocab.py
tests/: conftest.py
tests/fixtures/eval_raw/: 10.txt  linux.txt
tests/fixtures/expected/10/: 01_soft_clean.txt  03_stacktrace.txt  03b_inplace_sanitize.txt  03c_warnings.txt  (+5 more)
tests/fixtures/lg/: __init__.py
tests/golden/lg/: full_route.txt  medium_cicd.txt  tiny_trace.txt
tests/lg/: test_classify.py  test_cli_integration.py  test_cli_logging.py  test_debug.py  test_header.py  test_history.py  test_io_config.py  test_passthrough.py  test_pipeline.py  test_pytest_block_extract.py  test_quality_smoke.py  test_runner.py  test_stats.py  test_storage.py  test_v23_golden_dry.py  test_value_paste.py  test_windows_exec.py
(+6 files in other folders)
