[project]
name = "log-guard"
version = "1.0.0"
description = "LogGuard CLI — v3 log compression for coding agents"
readme = "README.md"
requires-python = ">=3.13.5,<3.14"
dependencies = [
    "drain3>=0.9.11",
    "google-genai>=2.10.0",
    "lark>=1.2.2",
    "loguru>=0.7.3",
    "numpy>=2.4.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "tenacity>=9.1.4",
]

[project.scripts]
lg = "log_guard.lg.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/log_guard"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
