[project]
name = "log-guard"
version = "1.0.0"
description = "LogGuard CLI — v3 log compression for coding agents"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12.1,<3.14"
authors = [{ name = "LogGuard contributors" }]
keywords = ["logs", "compression", "cli", "agents", "gemini"]
dependencies = [
    "drain3>=0.9.11",
    "google-genai>=1.0.0,<3",
    "lark>=1.1.0,<2",
    "loguru>=0.7.0,<1",
    "python-dotenv>=1.0.0,<2",
    "scikit-learn>=1.4.0,<2",
    "tenacity>=8.0.0,<10",
]

[project.scripts]
lg = "log_guard.lg.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/LICENSE",
    "/README.md",
    "/.cursorrules",
    "/.env.example",
]

[tool.hatch.build.targets.wheel]
packages = ["src/log_guard"]

# Ensure non-Python package data ships in the wheel.
[tool.hatch.build.targets.wheel.force-include]
"src/log_guard/lg/tracks.toml" = "log_guard/lg/tracks.toml"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
